Fix security issues in Tasks Board and improve functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,15 @@ td {
   text-align: left;
   padding: 4px; }
 
+.text-left {
+  text-align: left; }
+
+.text-right {
+  text-align: right; }
+
+.text-center {
+  text-align: center; }
+
 /*td {
         padding: 2px;
 }*/
