--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -151,6 +151,15 @@ td { padding: 2px; }
     padding: 4px;
 }
 
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
+.text-center {
+    text-align: center;
+}
 /*td {
         padding: 2px;
 }*/
